# froid

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  froid.sqlite3
.github/workflows/: ci.yml
migrations/: 0001_create_journal_entries.sql  0002_create_journal_entry_embeddings.sql  0003_create_daily_reviews.sql  0004_add_daily_review_delivery.sql  0005_create_journal_entry_extractions.sql  0006_add_embedding_status.sql  0007_add_signal_status_to_daily_reviews.sql  0007_create_daily_review_signal_jobs.sql  0008_create_daily_review_signals.sql  0009_create_daily_review_embeddings.sql  0010_create_weekly_reviews.sql  0011_add_weekly_reviews_inputs_snapshot.sql  0012_remove_user_scoping.sql
prompts/: analyzer_v1.md  daily_review_signal_extraction_v1.md  daily_review_v1.md  daily_review_with_entry_extractions_v1.md  entry_extraction_v1.md  weekly_review_v1.md
src/: app.rs  cli.rs  config.rs  database.rs  echo.rs  handler.rs  lib.rs  main.rs  messages.rs  version.rs
src/adapters/: analyzer_telegram.rs  mcp.rs  mod.rs  telegram.rs
src/journal/: command.rs  embedding.rs  entry.rs  mod.rs  repository.rs  responses.rs  search.rs  service.rs  status.rs  store.rs
src/journal/analyzer/: agent.rs  journal.rs  mod.rs  review.rs  semantic.rs  signal.rs  types.rs  validation.rs  wiring.rs
src/journal/embedding/: backfill.rs  config.rs  mod.rs  provider.rs  repository.rs  tests.rs  types.rs  worker_config.rs
src/journal/extraction/: backfill.rs  generator.rs  mod.rs  prompt.rs  repository.rs  service.rs  types.rs  validation.rs  wiring.rs  worker_config.rs
src/journal/review/: delivery_config.rs  embedding_repository.rs  generator.rs  mod.rs  prompt.rs  repository.rs  search.rs  service.rs  wiring.rs
src/journal/service/: commands.rs  mod.rs  tests.rs
src/workers/: config.rs  daily_review.rs  embedding.rs  extraction.rs  mod.rs  reconciliation.rs  signals.rs  weekly_review.rs
tests/: mcp_server.rs
(+21 files in other folders)
