[package]
name = "froid"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
teloxide = "0.17.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1.0.149"
