[package]
name = "froid"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
libsqlite3-sys = "0.30.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
sqlite-vec = "=0.1.9"
teloxide = "0.17.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1.0.149"
