[package]
name = "froid"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
libsqlite3-sys = "0.30.1"
rig-core = "0.36.0"
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
sqlite-vec = "=0.1.9"
teloxide = "0.17.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "1.2.1", features = ["chrono04"] }
rmcp = { version = "1.6", features = ["server", "transport-streamable-http-server"] }
axum = "0.8"
